--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mysql": "^2.18.1",
     "pm2": "^5.3.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
