--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "^7.1.1",
     "forever": "^4.0.3",
     "handlebars": "^4.7.8",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
     "pm2": "^5.3.0",
